data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1273.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\00\02\7f\7f\60\00\00\02\95\80\80\80\00\01\04\6d"
    "\6f\64\41\0c\6d\75\6c\74\69\5f\72\65\74\75\72\6e"
    "\00\00\03\82\80\80\80\00\01\01\0a\91\80\80\80\00"
    "\01\8b\80\80\80\00\00\02\00\10\00\0c\00\0b\1a\1a"
    "\0b"
  )
""
)